syntax = "proto3";

package hello;

import "google/protobuf/wrappers.proto";

service HelloService {
  rpc SayMeHello (google.protobuf.StringValue) returns (HelloMessage) {};
}

message HelloMessage {
  string response = 1;
}
